Caret is not rendered properly inside an input element with text-indent https://bugs.webkit.org/show_bug.cgi?id=82688

Reviewed by Ryosuke Niwa.

For an empty input element, there is no RenderText. Instead, RenderBlock::localCaretRect provides
the caret position for rendering the caret in the empty input element. To get correct caret rect,
textIndentOffset() should be used to adjust the caret's position.

Source/WebCore:

Test: editing/style/text-indent.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::localCaretRect):

LayoutTests:

* editing/style/text-indent-expected.txt: Added.
* editing/style/text-indent.html: Added.


Canonical link: https://commits.webkit.org/101712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114461 268f45cc-cd09-0410-ab3c-d52691b4dbfc